--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Nguyễn Công Khánh Tài | Backend Developer Portfolio" />
     <meta property="og:description" content="Backend Developer & Software Engineer Portfolio showcasing projects and experience" />
-    <meta property="og:url" content="https://tainguyen-profile.is-a.dev" />
+    <meta property="og:url" content="https://tainguyen.is-a.dev" />
     <meta property="og:site_name" content="Tài Nguyễn Portfolio" />
     
     <title>Nguyễn Công Khánh Tài | Portfolio</title>
